# Spreads.Native

./: .gitignore  .gitmodules  LICENSE.Dependencies.txt  README.md  azure-pipelines.yml
.github/workflows/: dotnetcore.yml
dotnet/: .editorconfig  Directory.Build.props  Spreads.Native.sln  build.cmd  docker-compose.dcproj  docker-compose.yml  test.bat
dotnet/docs/: filterConfig.yml
dotnet/lib/: compress.cmd
dotnet/lib/l64/: libspreads_native.compressed
dotnet/lib/native/: Spreads.Native.targets
dotnet/lib/runtimes/: libspreads_native.dylib
dotnet/lib/runtimes/osx-x64/native/: libspreads_native.dylib
dotnet/lib/runtimes/win-x64/native/: libspreads_native.dll_
dotnet/lib/w32/: spreads_native.dll.compressed
dotnet/lib/w64/: spreads_native.dll.compressed
dotnet/nuget/: local_build_debug.bat  local_build_release.bat  local_copy_artifacts.cmd  local_pack_debug.bat  local_pack_release.bat  local_pack_release_publish.bat  pack.cmd  pack_build.cmd  pack_release.cmd
dotnet/src/Spreads.Native/: Attributes.cs  Compression.cs  Constants.cs  Cpu.cs  CpuIdCache.cs  Interfaces.cs  Mem.cs  Pinnable.cs  ProcessorIdCache.cs  Spreads.Native.csproj  UnsafeEx.cs  UnsafeEx.il  Vec.cs  VecExtensions.cs  VecHelpers.cs  VecThrowHelper.DN.cs  VecThrowHelper.cs  VecTypeHelper.cs
dotnet/src/Spreads.Native/Bootstrap/: ABI.cs  Bootstrapper.cs  Loader.cs  NativeLibrary.cs  Process.cs  Version.cs
dotnet/src/Spreads.Native/Native/: Compression.cs
dotnet/src/Spreads.Native/Native/Bootstrap/: NativeLibrary.cs  Process.cs
dotnet/src/Spreads.Native/Properties/: Attributes.cs
dotnet/src/Spreads.Native/Utils/Bootstrap/: Process.cs
dotnet/src/Spreads.Unsafe/: Attributes.cs  Interfaces.cs  Spreads.Unsafe.csproj  UnsafeEx.cs  UnsafeEx.il
dotnet/tests/DockerRun/: DockerRun.dcproj  docker-compose.yml
dotnet/tests/Spreads.Native.Run/: Benchmark.cs  CpuIdBench.cs  Dockerfile  Program.cs  Spreads.Native.Run.461.csproj  Spreads.Native.Run.csproj
dotnet/tests/Spreads.Native.Run/Properties/PublishProfiles/: FolderProfile.pubxml
dotnet/tests/Spreads.Native.Run/results 1/: Spreads.Native.Run.Benchmark-report-default.md  Spreads.Native.Run.Benchmark-report-github.md  Spreads.Native.Run.Benchmark-report.csv  Spreads.Native.Run.Benchmark-report.html
dotnet/tests/Spreads.Native.Tests/: Benchmark.cs  CalliTests.cs  CompressionTests.cs  CpuIdCacheTests.cs  MemTests.cs  ProcessorIdCacheTests.cs  Spreads.Native.Tests.csproj  UnsafeExTests.cs  VecTests.cs  VecTypeHelperTests.cs
dotnet/tests/Spreads.Native.Tests.NuGet/: Spreads.Native.Tests.NuGet.csproj
dotnet/tests/Spreads.Unsafe.Tests/: Benchmark.cs  CalliTests.cs  Spreads.Unsafe.Tests.csproj  UnsafeExTests.cs
rs/: Cargo.toml  Readme.md
rs/.cargo/: config
rs/.devcontainer/: Dockerfile  devcontainer.json
rs/spreads-blosc-sys/: Cargo.toml  blosc_wrapper.h  build.rs
rs/spreads-blosc-sys/src/: lib.rs
rs/spreads-mimalloc-sys/: Cargo.toml  build.rs  mimalloc_wrapper.h
rs/spreads-mimalloc-sys/src/: lib.rs  mimalloc.rs
rs/spreads-pal/: Cargo.toml  Readme.md
rs/spreads-pal/src/: cpu.rs  lib.rs
rs/src/: compression.rs  lib.rs  main.rs  mem_allocation.rs
