[package]
name = "spreads-native"
homepage = "https://github.com/Spreads"
repository = "https://github.com/Spreads/Spreads.Native"
version = "0.1.1"
authors = ["Victor Baybekov <vbaybekov@gmail.com>"]
description = "Spreads's native utils"
license = "MPL-2.0"
edition = "2018"

[dependencies]
spreads-blosc-sys = { path = "spreads-blosc-sys" }
spreads-mimalloc-sys = { path = "spreads-mimalloc-sys" }
spreads-pal = { path = "spreads-pal" }
libc = { version = "*"}

[lib]
name = "spreads_native"
test = true
doctest = false
harness = true
crate-type = ["cdylib"] # dylib, rlib, staticlib, cdylib

[workspace]
members = [
    "spreads-blosc-sys",
    "spreads-mimalloc-sys",
    "spreads-pal"
]

[profile.dev]
debug = true

[profile.release]
opt-level = 3
lto = true
debug = false
panic = 'abort'
