[package]
name = "spreads-blosc-sys"
version = "0.1.0"
authors = ["Victor Baybekov <vbaybekov@gmail.com>"]
description = "Spreads's C-Blosc bindings for Rust."
build = "build.rs"

[lib]
name = "spreads_blosc_sys"
# crate-type = ["staticlib", "rlib"] # dylib, rlib, staticlib, cdylib

[dependencies]
libc = { version = "*"}

[build-dependencies]
cmake = "*"
bindgen = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'