[package]
name = "spreads-mimalloc-sys"
version = "0.1.0"
authors = ["Victor Baybekov <vbaybekov@gmail.com>"]
description = "Spreads's mimalloc bindings for Rust."
build = "build.rs"
edition = "2018"

[lib]
name = "spreads_mimalloc_sys"
test = true
doctest = false
harness = true
# crate-type = ["staticlib"] # dylib, rlib, staticlib, cdylib

[dependencies]
libc = { version = "*"}

[build-dependencies]
cmake = "*"
# bindgen = "*"

[features]
secure = []
secure-full = []